BUGFIX: add vertical spacing to content-lp-text change alignment of content-quote according to screendesign
Re: #263

--- a/app/styles/components/_content-lp-text.scss
+++ b/app/styles/components/_content-lp-text.scss
@@ -1,5 +1,6 @@
 .content-lp-text {
 	@include grid-base;
+	padding: 4rem 1.6rem 0;
 
 	& > * {
 		grid-column: 1 / -1;
