--- a/app/styles/components/_content-quote.scss
+++ b/app/styles/components/_content-quote.scss
@@ -9,11 +9,13 @@
 
 	&__text {
 		position: relative;
-		grid-column: 2 / -1;
+		//grid-column: 2 / -1;
+		grid-column: 1 / -1;
 		margin: 4rem 0;
 		font-size: 2.4rem;
 		font-weight: 700;
-		line-height: 2.5rem;
+		//line-height: 2.5rem;
+		line-height: 2.8rem;
 
 		@include media-large-min {
 			grid-column: 3 / -2;
